Ch 2 Add note on ethnicity defined in this study

--- a/Sections/09_Chapter_2.Rmd
+++ b/Sections/09_Chapter_2.Rmd
@@ -16,7 +16,10 @@ In this study, we developed a placenta-specific approach to predicting ethnicity
 Planet uses DNAm and genotyping data measured on the 450k array and was developed using multiple cohorts of placentas from North America.
 To ensure compatibility with future studies, planet was developed on overlapping sites from 450k and the newer 850k array.
 We show that planet out-performs existing methods in predicting ethnicity in placental DNAm data and can produce accurate measures of genetic ancestry.
-Our method can be used to classify individuals into discrete groups based on self-reported race/ethnicity (i.e., Black/African, Asian, and White/Caucasian) or to describe individuals on an ancestral continuum that more accurately reflect the nature of human populations.
+Our method can be used to classify individuals into discrete groups based on self-reported race/ethnicity or to describe individuals on an ancestral continuum that more accurately reflect the nature of human populations. 
+In this study, self-reported ethnicity and race categories differed between cohorts.
+Therefore, ethnicity defined here is a collection of self-reported information that was recoded such that populations were grouped into 3 populations with high cultural similarity and common genetic ancestral origin ("African" = African, African American, and Black; "Caucasian" = Caucasian and Non-hispanic White; "Asian" = East Asian, Asian, and Asian).
+
 In studies where ethnicity information is unavailable, planet can be applied to predict ethnicity after obtaining DNAm data, and used to investigate population-specific differences or to minimize confounding by population stratification in downstream DNAm statistical analyses.
 
 ## Results
@@ -81,13 +84,16 @@ knitr::include_graphics(here::here('images', 'ch2', 'Figure 1.pdf'))
 
 To better understand the basis of planet's ethnicity prediction, we examined the 1860 sites automatically-selected by the GLMNET model.
 These sites were enriched for SNP probes, containing 15 of the 59 SNPs explicitly measured on both 450k and 850k DNAm arrays (p \< 1e-16).
-Of the remaining 1845 DNAm sites, we found significant enrichment for sites linked to genetic variation: 802 sites (43.1%) have a documented SNP in either the probe body, CpG site of interrogation, or the single base extension site (p \< 1e-16) [@daca-roszak2015], and 220 sites (11.8%) corresponded to previously identified placental-specific methylation quantitative trait loci (mQTLs) [@delahaye2018] (p \< 1e-16, Figure \@ref(fig:ch2fig1)b). With respect to chromosomal location, we found significant enrichment for ethnicity-predictive sites on chromosomes 2 (p \< 0.01), 15 (p \< 0.05), and 17 (p \< 0.05) (Figure \@ref(fig:figa5) file 2: Figure \@ref(fig:figa5)). With respect to CpG density, we found significant enrichment for ethnicity-predictive sites in OpenSea (p \< 0.001) and South Shore (p \< 0.05) regions (Figure \@ref(fig:figa5)), where relatively neutral (unselected) genetic variation is more likely to be located [@walser2010].
+Of the remaining 1845 DNAm sites, we found significant enrichment for sites linked to genetic variation: 802 sites (43.1%) have a documented SNP in either the probe body, CpG site of interrogation, or the single base extension site (p \< 1e-16) [@daca-roszak2015], and 220 sites (11.8%) corresponded to previously identified placental-specific methylation quantitative trait loci (mQTLs) [@delahaye2018] (p \< 1e-16, Figure \@ref(fig:ch2fig1)b). 
+With respect to chromosomal location, we found significant enrichment for ethnicity-predictive sites on chromosomes 2 (p \< 0.01), 15 (p \< 0.05), and 17 (p \< 0.05) (Figure \@ref(fig:figa5) file 2: Figure \@ref(fig:figa5)). 
+With respect to CpG density, we found significant enrichment for ethnicity-predictive sites in OpenSea (p \< 0.001) and South Shore (p \< 0.05) regions (Figure \@ref(fig:figa5)), where relatively neutral (unselected) genetic variation is more likely to be located [@walser2010].
 Pathway analysis for GO and KEGG terms for genes associated with the 1860 sites, found only one significant (p \< 0.05) GO term (homophilic cell adhesion via plasma membrane adhesion molecules).
 
 ### DNAm -inferred ethnicity and genetic ancestry
 
 To test the ability of planet to identify individuals of mixed ancestry, we examined whether samples classified as 'ambiguous' were also intermediate with respect to genetically-defined ancestry.
-Genetic ancestry was inferred from 50 ancestry informative genotyping markers (AIMs) in samples from cohorts C4 and C5 (n = 109), using 1000 Genomes Project samples as reference populations [@gibbs2015; @delgobbo2018]. These 50 markers were previously selected based on their ability to differentiate between African, European, East Asian, and South Asian populations [@delgobbo2018].
+Genetic ancestry was inferred from 50 ancestry informative genotyping markers (AIMs) in samples from cohorts C4 and C5 (n = 109), using 1000 Genomes Project samples as reference populations [@gibbs2015; @delgobbo2018]. 
+These 50 markers were previously selected based on their ability to differentiate between African, European, East Asian, and South Asian populations [@delgobbo2018].
 Plotting the first two multi-dimensional scaling coordinates calculated on the 50 AIMs in (Figure \@ref(fig:ch2fig2)), shows a handful of samples intermediate to three more distinct ancestry clusters.
 The samples with less extreme genetic ancestry coordinates based on AIMs tended to have lower planet-calculated probabilities associated with the ethnicity classification matching the individual's self-reported ethnicity (Figure \@ref(fig:ch2fig2)) confirming that planet provides some information on the genetic ancestry composition.
 
@@ -97,7 +103,8 @@ The samples with less extreme genetic ancestry coordinates based on AIMs tended 
 knitr::include_graphics(here::here('images', 'ch2', 'Figure 2.pdf'))
 ```
 
-Although genetic ancestry can be adequately inferred from a small set of AIMs, it is best obtained from a large number of unlinked markers [@price2010]. Therefore, we also inferred genetic ancestry in a smaller number of samples from C5 (n = 37) with high density genotyping array data (Omni 2.5, \>2.5 million SNPs), again using 1000 Genomes Project samples as reference populations [@gibbs2015; @frichot2015; @roslin2016], and compared this to planet's predicted membership probabilities for each ethnicity (Figure \@ref(fig:ch2fig3)a-c).
+Although genetic ancestry can be adequately inferred from a small set of AIMs, it is best obtained from a large number of unlinked markers [@price2010]. 
+Therefore, we also inferred genetic ancestry in a smaller number of samples from C5 (n = 37) with high density genotyping array data (Omni 2.5, \>2.5 million SNPs), again using 1000 Genomes Project samples as reference populations [@gibbs2015; @frichot2015; @roslin2016], and compared this to planet's predicted membership probabilities for each ethnicity (Figure \@ref(fig:ch2fig3)a-c).
 10 of these 37 samples were not initially used for previous analyses due to a lack of available self-reported ethnicity information (Figure \@ref(fig:ch2fig3)a).
 We found that genetic ancestry coefficients reflected the probabilities associated with ethnicity classification to a high degree (Figure \@ref(fig:ch2fig3)bc, R2 = 0.95-0.96, p \< 0.001).
 
@@ -133,7 +140,11 @@ knitr::include_graphics(here::here('images', 'ch2', 'Figure 4.pdf'))
 Lastly, to demonstrate the utility of applying planet to placental DNAm data, we applied planet to obtain ethnicity classifications across two previously published EWAS studies using three datasets (Table \@ref(tab:ch2tab3), Figure \@ref(fig:figa9)).
 We note that this includes samples from cohorts C4 and C5 that were used to develop planet.
 
-One study used two distinct cohorts from Vancouver, Canada (GSE100197, = 102) and Toronto, Canada (GSE98224, n = 48) to investigate DNAm alterations associated with preeclampsia status [@wilson2018]. We reasoned that correction for ethnicity should decrease false positives in the EWAS and therefore increase concordance between hits identified in the two data sets. In the original EWAS, with no adjustment for ethnicity, our group reported that 599 out of the 1703 (35.1%) significant associations found in the discovery cohort were also significant in the validation cohort, and the correlation of the difference in mean DNAm between controls and preeclampsia-affected samples (i.e. delta betas) at FDR significant sites between discovery and validation was 0.62 [@wilson2018]. When we repeated the analysis while adjusting for ethnicity determined by planet, the number of preeclampsia-associated sites that overlapped between cohorts increased to 651/1614 (40.3%) [Table \@ref(tab:taba5)], and the correlation between delta betas increased to 0.66. We also found that repeating gene set enrichment analysis, which originally found nothing significant [@wilson2018], yielded several significantly enriched GO terms such as developmental process, inflammatory response and cell adhesion.
+One study used two distinct cohorts from Vancouver, Canada (GSE100197, = 102) and Toronto, Canada (GSE98224, n = 48) to investigate DNAm alterations associated with preeclampsia status [@wilson2018]. 
+We reasoned that correction for ethnicity should decrease false positives in the EWAS and therefore increase concordance between hits identified in the two data sets. 
+In the original EWAS, with no adjustment for ethnicity, our group reported that 599 out of the 1703 (35.1%) significant associations found in the discovery cohort were also significant in the validation cohort, and the correlation of the difference in mean DNAm between controls and preeclampsia-affected samples (i.e. delta betas) at FDR significant sites between discovery and validation was 0.62 [@wilson2018]. 
+When we repeated the analysis while adjusting for ethnicity determined by planet, the number of preeclampsia-associated sites that overlapped between cohorts increased to 651/1614 (40.3%) [Table \@ref(tab:taba5)], and the correlation between delta betas increased to 0.66. 
+We also found that repeating gene set enrichment analysis, which originally found nothing significant [@wilson2018], yielded several significantly enriched GO terms such as developmental process, inflammatory response and cell adhesion.
 
 Next, because adjustment for population stratification can not only be done via correction in linear modelling, but can also be done by stratifying an analysis by population identity, we performed a secondary EWAS confined to samples predicted as Caucasians (n = 71/102 for discovery, n = 28/48 for validation).
 This resulted in a decrease in overlap in preeclampsia-associated sites between cohorts: 359/1488 (17%) [Table \@ref(tab:taba7)], although the correlation between delta betas remained high (r = 0.67), indicating the observed decrease in overlap between significantly differentially methylated sites was likely due to a decrease in power from smaller sample size (particularly in the validation group) rather than a decrease in concordance between cohorts.
@@ -164,9 +175,15 @@ In this study, we developed planet, a method to predict Asian, African, and Cauc
 To enable compatibility with future studies, planet was developed on sites (452,453 CpGs and 59 SNPs) overlapping between 450k and 850k DNAm arrays.
 Although all samples in this study were reported as a single ethnicity/race, we expected that there would be significant population substructure that might limit our ability to develop predictive models of ethnicity and to assess their performance.
 Despite this limitation, ethnicity could be predicted with high accuracy as assessed by cross validation.
-planet's DNAm-based ethnicity classification relies on 450k sites with large amounts of genetic signal, which supported our initial efforts to filter our data to enrich for genetic-informative sites prior to classifier development (methods) [41, 50, 51]. When examining planet's 1,860 sites used to predict ethnicity, more than half could be linked to a nearby genetic polymorphism. Of these, 802 CpG sites have documented SNPs in their probe body, single base extension or CpG site of interrogation, which previously have been identified to differ between European and East Asian populations [@daca-roszak2015]. Several studies have suggested the genetic influence on DNAm at these sites is primarily technical in nature [@daca-roszak2015; @chen2013; @price2013], suggesting the patterns in DNAm at these sites are likely tissue-agnostic, warranting further investigation in their utility in predicting ethnicity and/or genetic ancestry in tissues other than the placenta. A significant proportion of other ethnicity-predictive CpG sites (n = 220) were previously found associated with placental mQTLs in a population with similar demographics to the ones studied here [@delahaye2018]. This finding, together with EPISTRUCTURE---a method that also relies on mQTLs [@rahmani2017]---suggests that leveraging the tissue- and population- specificity of mQTLs can produce highly effective DNAm -based population structure inference methods.
+planet's DNAm-based ethnicity classification relies on 450k sites with large amounts of genetic signal, which supported our initial efforts to filter our data to enrich for genetic-informative sites prior to classifier development (methods) [41, 50, 51].
+When examining planet's 1,860 sites used to predict ethnicity, more than half could be linked to a nearby genetic polymorphism. 
+Of these, 802 CpG sites have documented SNPs in their probe body, single base extension or CpG site of interrogation, which previously have been identified to differ between European and East Asian populations [@daca-roszak2015]. 
+Several studies have suggested the genetic influence on DNAm at these sites is primarily technical in nature [@daca-roszak2015; @chen2013; @price2013], suggesting the patterns in DNAm at these sites are likely tissue-agnostic, warranting further investigation in their utility in predicting ethnicity and/or genetic ancestry in tissues other than the placenta. 
+A significant proportion of other ethnicity-predictive CpG sites (n = 220) were previously found associated with placental mQTLs in a population with similar demographics to the ones studied here [@delahaye2018]. 
+This finding, together with EPISTRUCTURE---a method that also relies on mQTLs [@rahmani2017]---suggests that leveraging the tissue- and population- specificity of mQTLs can produce highly effective DNAm -based population structure inference methods.
 
-Of the existing methods to assess population stratification from DNAm data, we note that Barfield's method and EPISTRUCTURE infer continuous measures of genetic ancestry, while Zhou's SNP-based classifier returns discrete ethnicity classifications, however ours produce both [@barfield2014; @rahmani2017; @zhou2017] (Table \@ref(tab:ch2tab1)). EPISTRUCTURE and Barfield's method are unsupervised PCA-based approaches, which rely on the empirical observation that specific DNAm sites can be highly correlated with PCs computed on genome-wide genotype data in adult blood samples [@barfield2014; @rahmani2017].
+Of the existing methods to assess population stratification from DNAm data, we note that Barfield's method and EPISTRUCTURE infer continuous measures of genetic ancestry, while Zhou's SNP-based classifier returns discrete ethnicity classifications, however ours produce both [@barfield2014; @rahmani2017; @zhou2017] (Table \@ref(tab:ch2tab1)).
+EPISTRUCTURE and Barfield's method are unsupervised PCA-based approaches, which rely on the empirical observation that specific DNAm sites can be highly correlated with PCs computed on genome-wide genotype data in adult blood samples [@barfield2014; @rahmani2017].
 However, we found that DNAm at these sites did not produce PCs that are highly associated with genotype data in placental samples.
 Instead, top PCs were more often associated with non-ancestry related variables in the placental samples included in this study, such as gestational age, preeclampsia, and technical variables.
 Ethnicity and genetic ancestry -associated PCs were confined to the third to sixth component of variation, suggesting that application of these methods may require filtering of PCs to those that are ethnicity / ancestry-specific, which is impossible when self-reported ethnicity and genetic ancestry information is unavailable (i.e. when these methods are needed most).
@@ -184,7 +201,9 @@ Results of DNAm studies on genetic ancestry and ethnicity, such as this one, dep
 Due to limitations in sample availability, only African, Asian, and Caucasian ethnicities were included in our study.
 However, we note that these ethnicities are among the most common in North American populations---but future developments should consider inclusion of additional ethnicities.
 Furthermore, due to limited number of samples with high density genetic data, we were unable to address the extent of finer population structure that likely exists within the major ancestral groups studied.
-Differences in ethnic composition in samples from our study and samples used to develop Barfield's method and EPISTRUCTURE may also explain why Barfield's method or EPISTRUCTURE performed poorly in our study [@barfield2014; @rahmani2017]. A lack of generalizability of these methods to our placental samples was likely further compounded by the use of different tissues to develop each method---Barfield and EPISTRUCTURE were both developed and tested in blood tissue only. This is especially important to consider when applying these techniques to tissues with unique DNAm profiles, such as placenta [@robinson2015].
+Differences in ethnic composition in samples from our study and samples used to develop Barfield's method and EPISTRUCTURE may also explain why Barfield's method or EPISTRUCTURE performed poorly in our study [@barfield2014; @rahmani2017]. 
+A lack of generalizability of these methods to our placental samples was likely further compounded by the use of different tissues to develop each method---Barfield and EPISTRUCTURE were both developed and tested in blood tissue only. 
+This is especially important to consider when applying these techniques to tissues with unique DNAm profiles, such as placenta [@robinson2015].
 It is possible that application of these approaches to other tissues that are more similar to blood (e.g. other somatically-derived tissues) may result in better performance compared to when applied to placenta as seen in this study.
 However, any DNAm-based test needs to be validated before application to new tissues, which has not yet been done for these methods.
 
@@ -206,14 +225,20 @@ The machine-learning approach used to develop planet can easily be applied for o
 
 ### Collection of previously published placental 450k DNA methylation data
 
-Placental DNAm data from liveborn deliveries of healthy and mixed pregnancy complications (n = 585), were combined from seven GEO 450k datasets corresponding to five North American cohorts (summarized in Table \@ref(tab:ch2tab2)) [@wilson2018; @edgar2002; @martin2015; @paquette2016; @binder2015; @hanna2016]. Five unpublished samples from the C5 cohort were included and are available at GSE128827. Gestational ages of these pregnancies at delivery ranged from 26 to 42 weeks and 50.30% of samples were male. Samples were excluded (n=67) if their self-reported ethnicity was missing or did not fall into one of three major race/ethnicity groups: Asian/East Asian (n=53), Caucasian/White (non-hispanic) (n=389), or African/African American/Black (n=57). Based on census data [@uniteds], we note that self-reported Caucasian/White (non-hispanic) samples are typically of European ancestry, self-reported Asians are typically of East Asian ancestry and self-reported African represent diverse ancestries from Africa with a significant potential of admixture from other ancestries [@bryc2015].
+Placental DNAm data from liveborn deliveries of healthy and mixed pregnancy complications (n = 585), were combined from seven GEO 450k datasets corresponding to five North American cohorts (summarized in Table \@ref(tab:ch2tab2)) [@wilson2018; @edgar2002; @martin2015; @paquette2016; @binder2015; @hanna2016]. 
+Five unpublished samples from the C5 cohort were included and are available at GSE128827. 
+Gestational ages of these pregnancies at delivery ranged from 26 to 42 weeks and 50.30% of samples were male. Samples were excluded (n=67) if their self-reported ethnicity was missing or did not fall into one of three major race/ethnicity groups: Asian/East Asian (n=53), Caucasian/White (non-hispanic) (n=389), or African/African American/Black (n=57). 
+Based on census data [@uniteds], we note that self-reported Caucasian/White (non-hispanic) samples are typically of European ancestry, self-reported Asians are typically of East Asian ancestry and self-reported African represent diverse ancestries from Africa with a significant potential of admixture from other ancestries [@bryc2015].
 When possible, data was downloaded as raw IDAT files (GSE75248, GSE100197, GSE100197, GSE108567, GSE74738), otherwise methylated and unmethylated intensities were utilized (GSE70453, GSE73375).
 
 ### DNA methylation data processing
 
 All samples were analyzed using the Illumina Infinium HumanMethylation450 BeadChip array.
 Array data analysis was performed using R version 3.5.0.
-To allow compatibility of planet with the newer 850k microarray, the raw 450k data (485,512 CpGs, 65 SNPs) was filtered to the 452,453 CpGs and 59 SNPs common between both platforms prior to classifier development [@zhou2017]. Because genetic variability can capture ancestry information, we omitted the common filtering step that would remove sites with probes that overlap SNPs (n = 52,116 at a minor allele frequency \> 0.05). CpGs were removed if greater than 1% of samples had poor quality signal (bead count \< 3, or a detection p-value \> 0.01; n = 14,858). The remaining poor quality measurements were replaced with imputed values using K-Nearest Neighbours from the R package impute [@hastie2018]. Cross-hybridizing (n = 41,937) [@chen2013; @price2013] and placental-specific non-variable sites (n = 86,502) [@edgar2017] were also removed, leaving 319,233 sites for classifier development.
+To allow compatibility of planet with the newer 850k microarray, the raw 450k data (485,512 CpGs, 65 SNPs) was filtered to the 452,453 CpGs and 59 SNPs common between both platforms prior to classifier development [@zhou2017]. 
+Because genetic variability can capture ancestry information, we omitted the common filtering step that would remove sites with probes that overlap SNPs (n = 52,116 at a minor allele frequency \> 0.05). 
+CpGs were removed if greater than 1% of samples had poor quality signal (bead count \< 3, or a detection p-value \> 0.01; n = 14,858). 
+The remaining poor quality measurements were replaced with imputed values using K-Nearest Neighbours from the R package impute [@hastie2018]. Cross-hybridizing (n = 41,937) [@chen2013; @price2013] and placental-specific non-variable sites (n = 86,502) [@edgar2017] were also removed, leaving 319,233 sites for classifier development.
 
 Biological sex was determined by hierarchical clustering on DNAm measured from sites on the sex chromosomes and then compared to reported sex.
 Samples with discordant reported and inferred sex were removed (n=3).
@@ -223,10 +248,18 @@ Intra-array normalization methods, normal-exponential out-of-band (NOOB) [@trich
 ### Genotyping data collection and genetic ancestry assessment
 
 In a subset of C5 (n = 27) and 10 additional samples, high density SNP array genotypes were collected.
-DNA samples from one site from the fetal side of each placenta were collected as previously described [@delgobbo2018a] and quality was checked using a NanoDrop ND-1000 (Thermo Scientific) as well as by electrophoresis on a 1% agarose gel. Genotyping at \~2.3 million SNPs was done on the Illumina Infinium Omni2.5-8 (Omni2.5) array at the Centre for Applied Genomics, Hospital for Sick Kids, Toronto, Canada. For inferring genetic ancestry, the data for these 37 samples was combined with a previously processed 1000 Genomes Project Omni2.5 dataset (n = 1,756) to use as reference populations [@gibbs2015; @roslin2016]. Genotypes in this combined dataset were filtered for quality (missing call rate \> 0.05, n removed = 31,604), minor allele frequency (MAF \> 0.05, n removed = 114,628), and linkage disequilibrium pruning was performed to select representative SNPs (R2 \< 0.25, n removed = 919,824) for a final dataset of 218,732 SNPs and n = 1793 samples. Genetic ancestry coefficients were estimated using the R package LEA, which utilizes sparse non-negative matrix factorization to produce similar results to model-based algorithms ADMIXTURE and STRUCTURE [@frichot2015; @alexander2009]. Cross-entropy criterion was used to assess the number of ancestral populations (Figure \@ref(fig:figa8)) [@frichot2014].
+DNA samples from one site from the fetal side of each placenta were collected as previously described [@delgobbo2018a] and quality was checked using a NanoDrop ND-1000 (Thermo Scientific) as well as by electrophoresis on a 1% agarose gel. 
+Genotyping at \~2.3 million SNPs was done on the Illumina Infinium Omni2.5-8 (Omni2.5) array at the Centre for Applied Genomics, Hospital for Sick Kids, Toronto, Canada. 
+For inferring genetic ancestry, the data for these 37 samples was combined with a previously processed 1000 Genomes Project Omni2.5 dataset (n = 1,756) to use as reference populations [@gibbs2015; @roslin2016]. 
+Genotypes in this combined dataset were filtered for quality (missing call rate \> 0.05, n removed = 31,604), minor allele frequency (MAF \> 0.05, n removed = 114,628), and linkage disequilibrium pruning was performed to select representative SNPs (R2 \< 0.25, n removed = 919,824) for a final dataset of 218,732 SNPs and n = 1793 samples.
+Genetic ancestry coefficients were estimated using the R package LEA, which utilizes sparse non-negative matrix factorization to produce similar results to model-based algorithms ADMIXTURE and STRUCTURE [@frichot2015; @alexander2009]. 
+Cross-entropy criterion was used to assess the number of ancestral populations (Figure \@ref(fig:figa8)) [@frichot2014].
 
 A smaller panel of 50 ancestry-informative genotyping markers (AIMs) was collected in a subset of samples from cohorts C4 (n = 41) and C5 (n = 68).
-AIMs were selected based on their ability to differentiate between African, European, East Asian, and South Asian populations [@phillips2013; @phillips2007; @fondevila2013]. Results from cohort C5 have been published elsewhere [@delgobbo2018], and genotyping data was collected for cohort C4 in the same manner. Briefly, these markers were measured in placental villus DNA using the Sequenom iPlex Gold platform (Génome Québec Innovation Centre, Montréal, Canada). Genetic ancestry inferred from 50 AIMs markers was computed using multi-dimensional scaling after combining with the same 50 AIMs from the 1000 Genomes Project samples, as previously described [@delgobbo2018].
+AIMs were selected based on their ability to differentiate between African, European, East Asian, and South Asian populations [@phillips2013; @phillips2007; @fondevila2013]. 
+Results from cohort C5 have been published elsewhere [@delgobbo2018], and genotyping data was collected for cohort C4 in the same manner. 
+Briefly, these markers were measured in placental villus DNA using the Sequenom iPlex Gold platform (Génome Québec Innovation Centre, Montréal, Canada). 
+Genetic ancestry inferred from 50 AIMs markers was computed using multi-dimensional scaling after combining with the same 50 AIMs from the 1000 Genomes Project samples, as previously described [@delgobbo2018].
 
 ### Developing the ethnicity classifier and assessing its performance
 
@@ -237,13 +270,17 @@ LODOCV produces more accurate estimates of classifier performance for future stu
 Each iteration of LODOCV generates dataset-specific estimates of performance (accuracy, Kappa).
 After all iterations, overall performance was assessed by aggregating classifications across all datasets.
 
-For fitting predictive models within LODOCV-generated training sets, we used the R package caret [@kuhn2008] Several algorithms were compared: logistic regression with an elastic net penalty (GLMNET) [@friedman2010a; @zou2005a], nearest shrunken centroids (NSC) [@tibshirani2003a; @tibshirani2002], K-nearest neighbours (KNN) [@altman1992a], and support vector machines (SVM) [@cortes1995]. To determine optimum tuning parameters for each algorithm (e.g., 'k' number of neighbours for KNN, alpha and lambda for GLMNET), we built several models while varying the tuning parameter(s) and compared the performance of these models within each training set using repeated (n = 3) five-fold cross validation. Hyperparameter values were left as default settings in caret [@kuhn2008a], or a grid of values for GLMNET (alpha = 0.025 -- 0.500, lambda = 0.0025 -- 0.2500). We compared the performance of these models using accuracy, positive predictive value, cohen's Kappa [@mchugh2012], and logLoss (a measure of classification accuracy that heavily penalizes over-confident misclassifications).
+For fitting predictive models within LODOCV-generated training sets, we used the R package caret [@kuhn2008] Several algorithms were compared: logistic regression with an elastic net penalty (GLMNET) [@friedman2010a; @zou2005a], nearest shrunken centroids (NSC) [@tibshirani2003a; @tibshirani2002], K-nearest neighbours (KNN) [@altman1992a], and support vector machines (SVM) [@cortes1995]. 
+To determine optimum tuning parameters for each algorithm (e.g., 'k' number of neighbours for KNN, alpha and lambda for GLMNET), we built several models while varying the tuning parameter(s) and compared the performance of these models within each training set using repeated (n = 3) five-fold cross validation. 
+Hyperparameter values were left as default settings in caret [@kuhn2008a], or a grid of values for GLMNET (alpha = 0.025 -- 0.500, lambda = 0.0025 -- 0.2500). We compared the performance of these models using accuracy, positive predictive value, cohen's Kappa [@mchugh2012], and logLoss (a measure of classification accuracy that heavily penalizes over-confident misclassifications).
 After assessing the classifier performance using LODOCV, a final GLMNET model was fit to the entire dataset (cohorts C1-C5) using the same model fitting procedure described above and is available for use in future datasets (<https://github.com/wvictor14/planet>).
 
 ### Enrichment analysis
 
 The DNAm sites and SNPs selected to predict ethnicity in this final model (n = 1860) were used for enrichment analysis.
-For DNAm sites, we looked for enrichment for SNPs in the probe body, CpG site, and single base extension sites based on Illumina's 450k annotation version 1.2 [@hansen2016]. We looked for enrichment for placental mQTLs [@delahaye2018], chromosomes and CpG islands (HG19; Figure \@ref(fig:figa5)). Fisher's exact test was used for all enrichment tests using a p-value threshold of \< 0.05, and was carried out in R using the function fisher.test(). GO and KEGG pathway analysis was done using the R package missMethyl version 3.8 [@phipson2015].
+For DNAm sites, we looked for enrichment for SNPs in the probe body, CpG site, and single base extension sites based on Illumina's 450k annotation version 1.2 [@hansen2016]. 
+We looked for enrichment for placental mQTLs [@delahaye2018], chromosomes and CpG islands (HG19; Figure \@ref(fig:figa5)). 
+Fisher's exact test was used for all enrichment tests using a p-value threshold of \< 0.05, and was carried out in R using the function fisher.test(). GO and KEGG pathway analysis was done using the R package missMethyl version 3.8 [@phipson2015].
 
 ### Threshold analysis
 
