intro: start DNAm array section

--- a/Sections/08_Introduction.Rmd
+++ b/Sections/08_Introduction.Rmd
@@ -33,7 +33,7 @@ These factors that influence placental DNAm, - the subjects of this dissertation
 ## DNA methylation
 
 Despite all cells of the human body being nearly genetically identical, human cell types must coordinate a highly specific gene expression program to fulfill each of their own unique cellular niches.
-To achieve cell-specific gene expression programs, epigenetic processes function as the layer of molecular information that interacts with DNA to regulate gene expression.
+To achieve cell-specific gene expression programs, epigenetic processes function as a layer of molecular information that influences DNA interactions to regulate gene expression.
 Types of epigenetic marks include DNAm, histones and their post-translational modifications, non-histone chromatin proteins, higher order chromatin and chromosome organization, and non-coding RNAs.
 DNAm is the most widely studied epigenetic mark, owing to its relative stability and availability of cost-efficient technologies.
 
@@ -58,6 +58,15 @@ Lastly, at the blastocyst stage, DNAm is at it's lowest point, and new epigeneti
 ```{r introfig1, eval = T, echo = T, echo=FALSE, fig.cap="(ref:introfig1-cap)", fig.scap = "DNA methylation reprogramming during development", fig.align='center',  out.extra=''}
 knitr::include_graphics(here::here('images', 'introduction', 'intro-fig1.pdf'))
 ```
+
+## DNA methylation microarray profiling
+
+Although DNAm can be measured at various resolutions and technologies, ranging from targeted gene assays to whole genome bisulfite sequencing, this dissertation exclusively relies on the use of two generations of Illumina DNAm microarrays. 
+The Infinium HumanMethylation450 and Infinium MethylationEPIC BeadChip Microarrays, commonly referred to as the 450k and 850k arrays, measure DNAm at ~485,000 and ~850,000 CpGs across the genome. 
+Because of their reasonable coverage over element-rich genomic regions (e.g. genes, enhancers), affordability, and reliability, these microarrays are popular for population-based studies investigating disease and enivornmental effects on DNAm.
+Moreover, about 90% of the 450k is also covered by the newer 850k, which means that a significant amount of data is comparable from older studies.
+Particularly in at a time when data reproducibility is a high priority, the ability to compare new data and findings to past research is a highly beneficial characteristic of the Illumina DNAm microarrays. 
+
 
 ## Placental DNA methylation variation across human populations
 
