intro dnam profiling

--- a/References/references.bib
+++ b/References/references.bib
@@ -2531,3 +2531,33 @@ Type: article},
 	note = {{\_}eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/ajmg.a.62183},
 	langid = {en}
 }
+
+@article{teschendorff2013a,
+	title = {A beta-mixture quantile normalization method for correcting probe design bias in Illumina Infinium 450 k DNA methylation data.},
+	author = {{Teschendorff}, {Andrew E} and {Marabita}, {Francesco} and {Lechner}, {Matthias} and {Bartlett}, {Thomas} and {Tegner}, {Jesper} and {Gomez-Cabrero}, {David} and {Beck}, {Stephan}},
+	year = {2013},
+	month = {01},
+	date = {2013-01},
+	journal = {Bioinformatics (Oxford, England)},
+	pages = {189--96},
+	volume = {29},
+	number = {2},
+	doi = {10.1093/bioinformatics/bts680},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/23175756},
+	note = {tex.ids= teschendorffBetamixtureQuantileNormalization2013a}
+}
+
+@article{triche2013a,
+	title = {Low-level processing of Illumina Infinium DNA Methylation BeadArrays.},
+	author = {{Triche}, {Timothy J} and {Weisenberger}, {Daniel J} and {Van Den Berg}, {David} and {Laird}, {Peter W} and {Siegmund}, {Kimberly D} and {Siegmund}, {Kimberly D.}},
+	year = {2013},
+	month = {04},
+	date = {2013-04},
+	journal = {Nucleic acids research},
+	pages = {e90--e90},
+	volume = {41},
+	number = {7},
+	doi = {10.1093/nar/gkt090},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/23476028},
+	note = {tex.ids= tricheLowlevelProcessingIllumina2013a}
+}
